welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:22: error: not found: value minValues
	return maxValue(nums) - minValues(nums)
                                ^